feat(UserService): Refactor UserService class
Refactor UserService class